DDF-3600 Replaced catalog-core-directorymonitor with catalog-harvest-sourceharvestor

--- a/catalog/harvest/pom.xml
+++ b/catalog/harvest/pom.xml
@@ -31,6 +31,7 @@
         <module>catalog-harvest-api</module>
         <module>catalog-harvest-common</module>
         <module>catalog-harvest-file</module>
+        <module>catalog-harvest-sourceharvester</module>
         <module>catalog-harvest-metacardadaptor</module>
         <module>catalog-harvest-persistentlistener</module>
         <module>catalog-harvest-webdav</module>
