DDF-3660 Add security auditing

--- a/catalog/harvest/catalog-harvest-common/pom.xml
+++ b/catalog/harvest/catalog-harvest-common/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>catalog-core-api-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.security.core</groupId>
+            <artifactId>security-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Third Party -->
         <dependency>
