--- a/catalog/harvest/catalog-harvest-webdav/pom.xml
+++ b/catalog/harvest/catalog-harvest-webdav/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>sardine</artifactId>
             <version>${sardine.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
 
     <build>
