--- a/catalog/harvest/catalog-harvest-file/pom.xml
+++ b/catalog/harvest/catalog-harvest-file/pom.xml
@@ -55,9 +55,9 @@
             <version>${hazelcast.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <version>${jsr305.version}</version>
         </dependency>
     </dependencies>
 
