DDF-3660 MSFify WebDav

--- a/catalog/catalog-app/pom.xml
+++ b/catalog/catalog-app/pom.xml
@@ -645,7 +645,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.catalog.harvest</groupId>
-            <artifactId>catalog-harvest-sourceharvester</artifactId>
+            <artifactId>catalog-harvest-webdav</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
