--- a/catalog/harvest/catalog-harvest-file/pom.xml
+++ b/catalog/harvest/catalog-harvest-file/pom.xml
@@ -24,7 +24,7 @@
 
     <name>DDF :: Catalog :: Harvest :: File</name>
     <artifactId>catalog-harvest-file</artifactId>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
@@ -40,6 +40,11 @@
         <dependency>
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.catalog.harvest</groupId>
+            <artifactId>catalog-harvest-persistentlistener</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -63,6 +68,26 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package/>
+                        <Import-Package>
+                            org.apache.commons.io.comparator,
+                            *
+                        </Import-Package>
+                        <Embed-Dependency>
+                            catalog-harvest-persistentlistener,
+                            catalog-harvest-common,
+                            hazelcast,
+                            platform-util
+                        </Embed-Dependency>
+                    </instructions>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
