--- a/catalog/harvest/catalog-harvest-webdav/pom.xml
+++ b/catalog/harvest/catalog-harvest-webdav/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>platform-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.catalog.core</groupId>
+            <artifactId>catalog-core-api-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Third Party -->
         <dependency>
@@ -77,6 +82,7 @@
                         </Import-Package>
                         <Embed-Dependency>
                             catalog-harvest-common,
+                            catalog-core-api-impl,
                             sardine,
                             hazelcast,
                             httpcore,
