--- a/catalog/harvest/catalog-harvest-persistentlistener/pom.xml
+++ b/catalog/harvest/catalog-harvest-persistentlistener/pom.xml
@@ -65,6 +65,10 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
+                        <Import-Package>
+                            ddf.catalog.resource.impl;resolution:=optional,
+                            *
+                        </Import-Package>
                         <Embed-Dependency>
                             catalog-harvest-common,
                             hazelcast,
