--- a/catalog/harvest/catalog-harvest-metacardadaptor/pom.xml
+++ b/catalog/harvest/catalog-harvest-metacardadaptor/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>ddf-security-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- test dependencies -->
+        <dependency>
+            <groupId>ddf.lib</groupId>
+            <artifactId>spock-shaded</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -85,21 +92,20 @@
                                 <rule>
                                     <element>BUNDLE</element>
                                     <limits>
-                                        <!--TODO DDF-???? Add unit tests-->
                                         <limit>
                                             <counter>INSTRUCTION</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.00</minimum>
+                                            <minimum>0.89</minimum>
                                         </limit>
                                         <limit>
                                             <counter>BRANCH</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.00</minimum>
+                                            <minimum>0.92</minimum>
                                         </limit>
                                         <limit>
                                             <counter>COMPLEXITY</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.00</minimum>
+                                            <minimum>0.83</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
