--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -546,6 +546,7 @@
         <module>validator</module>
         <module>confluence</module>
         <module>async</module>
+      <module>services</module>
     </modules>
     <build>
         <plugins>
